Issue #206: Fix: query generation when tokenGroup is empty